--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
     "socket.io-client": "^4.8.3",
-    "sweetalert2": "^11.26.17"
+    "sweetalert2": "^11.26.17",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
