--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
     "mailersend": "^2.6.0",
     "mongodb": "^7.0.0",
